fix comment buttons on mobile

--- a/app/assets/stylesheets/bulletin.scss
+++ b/app/assets/stylesheets/bulletin.scss
@@ -20,9 +20,6 @@
       display: inline-block;
       vertical-align: top;
     }
-    .bulletin-info {
-      max-width: 80%;
-    }
     .link {
       width: 20%;
       max-width: 50px;
